--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Gioco dei Dadi</title>
     </head>
     <body>
         <script src="main.js" charset="utf-8"></script>
